<resources>
    <string name="app_name">NewsApp</string>
    <string name="Favorites">Favorites</string>
    <string name="SearchNews">Search News</string>
    <string name="category">Categories</string>
    <string name="discover">Discover</string>
    <string name="TopNews">Top News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="language">language</string>
    <string name="sortBy">Sorted By</string>
    <string name="maxResult">"Results"</string>
    <string name="latest">Latest</string>
    <string name="trending">trending</string>
    <string name="home">home</string>
    <string name="fav">favourite</string>
    <string name="no_internet_connection">No Internet Connection</string>
</resources>