<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/discover_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_view_headline_24"
        android:title="@string/discover" />

    <item
        android:id="@+id/category_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_category_24"
        android:title="@string/category" />

    <item
        android:id="@+id/search_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/SearchNews" />

    <item
        android:id="@+id/fav_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/Favorites" />

</menu>