<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.SearchFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            app:boxBackgroundColor="@null"
            app:startIconDrawable="@drawable/ic_search_black"
            app:startIconContentDescription="@string/SearchNews"
            android:hint="@string/SearchNews">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/llfilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@id/searchInput">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:hint="@string/maxResult">

                <AutoCompleteTextView
                    android:id="@+id/maxResults_Autocomplete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/language">

                <AutoCompleteTextView
                    android:id="@+id/language_Autocomplete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="en" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:hint="@string/sortBy">

                <AutoCompleteTextView
                    android:id="@+id/sortedBy_Autocomplete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="popularity" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <com.facebook.shimmer.ShimmerFrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/llfilter"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:id="@+id/shimmerLayout_search">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/shimmer_layout"></include>

                <include layout="@layout/shimmer_layout"></include>

                <include layout="@layout/shimmer_layout"></include>

                <include layout="@layout/shimmer_layout"></include>

            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_news_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/llfilter"
            android:layout_marginTop="5dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:visibility="gone" />

    </RelativeLayout>
</layout>